# ML-Finance-Bot

./: .gitignore  LICENSE  README.md
app/: dev_env  main.py  pyproject.toml
app/notebooks/: HW_development.ipynb  Homework #1.ipynb  Homework #2.ipynb  Homework #3.ipynb  Homework #5.ipynb  Homework #6.ipynb
app/src/core/: config.py  features.py  utils.py
app/src/frontend/: landing.py
app/src/models/: cnn_model.py  ensemble_model.py  gru_model.py  lstm_model.py  optimizer.py  training_loop.py  transformer_model.py
app/src/strategy/: bb_strategy.py  macd_strategy.py  ml_strategy.py  sma_cross_strategy.py  stoch_strategy.py  tema_strategy.py
